<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="job_service_notification">Job Service</string>
    <string name="job_notification_text">Your Job is running!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_has_been_scheduled">Job Scheduled, job will run when</string>
    <string name="when_the_contraints_are_met">The constraints are met.</string>
    <string name="all_jobs_cancelled">Jobs cancelled</string>
</resources>
